# FEAPACK

./: .gitignore  README.md  pyproject.toml
docs/: advanced1.html  advanced2.html  advanced3.html  advanced4.html  basic1.html  basic2.html  basic3.html  basic4.html  basic5.html  guide.html  index.html  listexamples.js  styles.css
docs/examples/advanced1/: advanced1.py
docs/examples/advanced2/: advanced2.py
docs/examples/advanced3/: advanced3.py
docs/examples/advanced4/: advanced4.py
docs/examples/basic1/: basic1.py
docs/examples/basic2/: basic2.inp  basic2.py
docs/examples/basic3/: basic3.inp  basic3.py
docs/examples/basic4/: basic4.inp  basic4.py
feapack/: typing.py
feapack/c/: libmkl.py
feapack/gmsh/: __init__.py  utility.py
feapack/io/: __init__.py  abaqusReader.py  meshReader.py
feapack/model/: __init__.py  acceleration.py  bodyLoad.py  boundaryCondition.py  concentratedLoad.py  element.py  elementSet.py  elementTypes.py  exceptions.py  material.py  mdb.py  mesh.py  modelingSpaces.py  node.py  nodeSet.py  odb.py  pressure.py  section.py  sectionTypes.py  surface.py  surfaceSet.py  surfaceTraction.py
feapack/resources/: __init__.py
feapack/solver/: __init__.py  isoparametric.py  linearAlgebra.py  main.py  procedures.py  sparseCSR.py  validation.py
feapack/viewer/: __init__.py  __main__.py  aboutDialog.py  animateDeformationDialog.py  animateTimeDialog.py  cli.py  infoBlock.py  interaction.py  interactionTypes.py  legend.py  mainWindow.py  odbView.py  renderingModes.py  spectrums.py  triad.py  viewport.py  views.py
(+2 files in other folders)
